--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Sergey Karakash",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql2": "^2.0.0",
+    "sequelize": "^5.21.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
