--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mysql2": "^2.0.0",
+    "react-router-dom": "^5.1.2",
     "sequelize": "^5.21.2"
   },
   "devDependencies": {
