--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Sergey Karakash",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "mysql2": "^2.0.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-router-dom": "^5.1.2",
     "sequelize": "^5.21.2"
   },
