--- a/package.json
+++ b/package.json
@@ -5,20 +5,26 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "client": "npm start --prefix client",
+    "server": "nodemon server.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Sergey Karakash",
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
+    "mongoose": "^5.7.12",
+    "mongoose-unique-validator": "^2.0.3",
     "mysql2": "^2.0.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-router-dom": "^5.1.2",
     "request": "^2.88.0",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "telegram-bot-api": "^1.3.3"
   },
   "devDependencies": {
+    "concurrently": "^5.0.0",
     "nodemon": "^1.19.4"
   }
 }
