--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "mongodb": "^3.3.5",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-loader-spinner": "^3.1.5",
     "react-scripts": "3.2.0"
   },
   "scripts": {
