--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Sergey Karakash",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "mongoose": "^5.7.12",
